import data from sie4 files